--- a/cs_indiv.Rmd
+++ b/cs_indiv.Rmd
@@ -14,11 +14,11 @@ library(tidyverse)
 - learn to scrape data from HTML pages
 - manipulate data obtained from HTML pages in R
 - create helpful R functions to analyze web data and extract useful information
-- create interactive function/app to facilitate exploratory analysis of career-related data
+- create interactive function/app to facilitate exploratory analysis of identified data
 
 # Case Study Goals
 
-In the individual case study, you will design a Shiny app or other presentation/visualization of data related to your career interests, presenting your work in class in December. Your presentation will describe your own career interests and lead the class through the resources you have designed to lead students with similar interests to discovering relevant information for their own career searches (e.g., data science jobs on the East Coast, graduate programs in statistics in cities with top 20 law schools, master's programs in statistics/data science that provide funding opportunities).
+In the individual case study, you will design a Shiny app or other presentation/visualization of interesting data (e.g., data related to your career interests), presenting your work in class in December. Your presentation will lead the class through the resources you have designed.
 
 
 
@@ -29,7 +29,7 @@ In the individual case study, you will design a Shiny app or other presentation/
 
 # Reports
 
-- Interim report 1: plan for design of individual case study
+- Interim report 1: analysis plan for design of individual case study
 - Interim report 2: draft of final report
 - Final report: 3 page maximum written report and oral presentation in class, guides students through your newly designed resource
 
@@ -39,9 +39,9 @@ In the individual case study, you will design a Shiny app or other presentation/
 Nolan and Temple Lang, Chapter 12
 
 
-# Slides
+# Slides (coming soon)
 
-
+<!---
 [Duke Databank for Cardiovascular Disease](decks/cs_indiv_1_deck.html)
 
 [Exploratory Web Scraping: Jiurui based on sections through 12.3](decks/cs_indiv_2_deck.html)
@@ -49,6 +49,6 @@ Nolan and Temple Lang, Chapter 12
 
 [Web Scraping and Analysis: Jiurui based on 12.4-12.9](decks/cs_indiv_3_deck.html)
 
-
+--->
 
 
