--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -14,17 +14,19 @@ library(tidyverse)
 # Learning Objectives
 
 - continue developing skills in using models for prediction
-- learn to scrape data from HTML pages and manipulate HTML elements in R
 - evaluate and update predictions based on dynamic data
 - combine data on a variety of levels (national, state, individual) to predict election outcomes
 
 # Case Study Goals
-Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control or reverts to Democratic control, and (2) to predict the outcomes of all NC Congressional elections
+Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control, and (2) to predict the outcomes of all NC Congressional elections.
 
-# Data
+# Data (coming soon)
+<!---
 
 + NC voter files at https://dl.ncsbe.gov/?prefix=data/
 + Cooperative Congressional Election Study https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study 
+
+--->
 
 # Reports
 
@@ -35,20 +37,21 @@ Goals of this case study are (1) to predict whether the US House of Representati
 
 # Resources
 
-+ http://thisisstatistics.org/demystifying-the-election-prediction-2016-contest/ 
-+ Why do we care about likely voters?  https://fivethirtyeight.com/features/registered-voter-polls-will-usually-overrate-democrats/ 
-+ FiveThirtyEight's 2016 forecast details: https://fivethirtyeight.com/features/a-users-guide-to-fivethirtyeights-2016-general-election-forecast/ 
-+ Potentially helpful blog 1: https://www.r-statistics.com/2016/08/presidential-election-predictions-2016/
-+ Potentially helpful blog 2: https://github.com/hardin47/prediction2016/blob/master/predblog.pdf
++ [Who is running for office, and which districts are viewed as competitive?](https://www.270towin.com/2018-house-election/)
++ [ASA 2016 Election Contest](http://thisisstatistics.org/demystifying-the-election-prediction-2016-contest/)
++ [Why do we care about likely voters?]( https://fivethirtyeight.com/features/registered-voter-polls-will-usually-overrate-democrats/)
++ [FiveThirtyEight's 2016 forecast details]( https://fivethirtyeight.com/features/a-users-guide-to-fivethirtyeights-2016-general-election-forecast/) 
++ [Potentially helpful blog 1]( https://www.r-statistics.com/2016/08/presidential-election-predictions-2016/)
++ [Potentially helpful blog 2]( https://github.com/hardin47/prediction2016/blob/master/predblog.pdf)
 
-# Slides
+# Slides (coming soon)
 
-
+<!---
 [Basics of Election Prediction](decks/cs04_1_deck.html)
 
 [MRP Tutorial](decks/cs04_2_deck.html)
 
-
+--->
 
 
 
