--- a/cs_indiv.Rmd
+++ b/cs_indiv.Rmd
@@ -14,7 +14,7 @@ library(tidyverse)
 - learn to scrape data from HTML pages
 - manipulate data obtained from HTML pages in R
 - create helpful R functions to analyze web data and extract useful information
-- create interactive function/app to facilitate exploratory analysis of identified data
+- create interactive function/app for analysis of identified data
 
 # Case Study Goals
 
@@ -25,7 +25,7 @@ In the individual case study, you will design a Shiny app or other presentation/
 
 # Data
 
-- Data should be obtained via web scraping. Software should be able to relatively easily accommodate regular updates to the data, to the extent possible.
+- Data should be obtained via web scraping or use of a dynamic online resource. Software should be able to relatively easily accommodate regular updates to the data, to the extent possible.
 
 # Reports
 
@@ -36,7 +36,7 @@ In the individual case study, you will design a Shiny app or other presentation/
 
 # Resources
 
-Nolan and Temple Lang, Chapter 12
+Nolan and Temple Lang, Chapter 12 (some of this chapter is now outdated)
 
 
 # Slides (coming soon)
@@ -45,7 +45,6 @@ Nolan and Temple Lang, Chapter 12
 [Duke Databank for Cardiovascular Disease](decks/cs_indiv_1_deck.html)
 
 [Exploratory Web Scraping: Jiurui based on sections through 12.3](decks/cs_indiv_2_deck.html)
-
 
 [Web Scraping and Analysis: Jiurui based on 12.4-12.9](decks/cs_indiv_3_deck.html)
 
