--- a/decks/cs01_4_deck.Rmd
+++ b/decks/cs01_4_deck.Rmd
@@ -34,6 +34,22 @@ Can we learn whether a factor may *cause* the increase or decrease in birthweigh
 * Causal analysis aims to infer aspects of the data generating process
   * Requires randomized experiments or causal assumptions 
 
+## Correlation does not imply causation 
+```{r , echo=FALSE, fig.cap="", out.width = '100%'}
+knitr::include_graphics("figures/tylervigen.png")
+```
+
+  
+## Randomization
+
+*Randomization* is a powerful technique in statistics that is used to make two (or more) groups of interest comparable. 
+
+For example, suppose that students in Duke's Master of Arts in Teaching program develop an innovative new math curriculum and that the program will be launched in area public schools. 
+If each school has the ability to choose (or not) the new curriculum, we might worry that the schools with smarter students, better teachers, more children of math professors, or even that are desperate to increase test performance might be more likely to adopt the new curriculum. Random allocation of schools to treatment, however, should alleviate these concerns by equally distributing schools with these characteristics across the curricula under study.
+
+## Confounding
+
+Smarter students, better teachers, etc. are considered potential *confounding* factors because they may be related to a school's decision to adopt the new curriculum and to student performance.  If schools with better students and teachers are more likely to adopt the new curriculum, and those schools have better performance, then we cannot be sure whether the performance is related to the new curriculum itself or to the qualities of the students and teachers in the schools that chose the new curriculum.
 
 ## Confounding
 * Let $W$ denote treatment, $Y$ outcome, and $X$ potential confounder
@@ -87,6 +103,8 @@ Average Treatment Effect (ATE) $$ \tau = \mathbb{E}[Y_i(1) - Y_i(0)]$$
 
 ## Quick start to using causal inference
 In oberservational studies, we must adjust for the measured confounding. *Propensity score* methods are one of several ways to do this.
+
+The idea behind these methods is to compare two groups of people who have different values of the treatment but similar values of the measured confounders $X$, in hopes that balancing comes close to random allocation of the treatment.
   
 
 
@@ -94,18 +112,16 @@ In oberservational studies, we must adjust for the measured confounding. *Propen
 A *propensity score* is defined as the conditional probability of receiving the treatment given the pre-treatment covariates $X$:
 $$ e(X) = Pr(W=1|X) = \mathbb{E}(W|X) $$
 
-Properties:
-
-1. Propensity scores can balance the distribution of all $X$ between treatment groups: 
+Propensity scores can balance the distribution of all $X$ between treatment groups: 
 $$ W \perp X | e(X)$$
-2. If $W$ is unconfounded given $X$, then $W$ is unconfounded given $e(X)$.
+  
   * $e(X)$ is a summary score of the observed covariates
   * We can use this lower-dimensional summary score of the covariates to perform causal inference through stratification, matching, weighting, etc.
   
 ##Propensity score analysis of causal effects
 Propensity score analysis (for observational studies) typically involves two stages:
 
-1. Estimate the propensity score: by a logistic regression or machine learning methods
+1. Estimate the propensity score (e.g., using logistic regression)
 2. Given the estimated propensity score, estimate the causal effects through one of these methods:
     1. Subclassification
     2. Weighting
@@ -119,27 +135,29 @@ library(Matching)
     
 ## National Supported Work Demonstration (NSW)
 
-The NSW was a US-federally-funded project was designed to provide 12-18 months of work experience to people who had faced economic and social problems. 
+The NSW was a US-federally-funded project designed to provide 12-18 months of work experience to people who had faced economic and social problems. 
 
-In this study, the outcome was income in 1978 (after program participation). Comparing participants to non-participants, researchers found the participants had higher income.
+In this study, the outcome was income in 1978 (after program participation). Comparing participants to non-participants, researchers found the participants had higher income. Does that mean the program worked?
 
 ## National Supported Work Demonstration (NSW)
 
 ```{r lalondehist,out.width='50%'}
 data(lalonde)
-hist(lalonde$re78) #yikes, zero-inflated
+hist(lalonde$re78, main="1978 Earnings", sub="(1978 US Median Income: 15000)",
+     xlab="Earnings") #yikes, zero-inflated
 ```
+
 
 ## National Supported Work Demonstration (NSW)
 ```{r simple}
-mean(lalonde$re78[lalonde$treat==1])
-mean(lalonde$re78[lalonde$treat==0])
+c(mean(lalonde$re78[lalonde$treat==1]==0),mean(lalonde$re78[lalonde$treat==0]==0)) 
+c(mean(lalonde$re78[lalonde$treat==1]),mean(lalonde$re78[lalonde$treat==0]))
 wilcox.test(lalonde$re78~lalonde$treat)
 ```
 
 ## Does this mean the program worked?
 
-One concern in evaluating the program is whether program participants (indicator variable treat=1) differ from non-participants across a variety of factors, including age, race and ethnicity, marital status, and high school graduation status.
+One concern in evaluating the program is whether program participants (indicator variable treat=1) differ from non-participants across a variety of factors, including age, race and ethnicity, marital status, high school graduation status, and income in 1974.
 
 ## Logistic regression
 
@@ -148,24 +166,25 @@ If the parameter $\beta_j>0$, then increasing levels of $x_j$ are associated wit
 
 ## NSW participants
 
-If NSW program participants are similar to comparison people in the data set, then we would expect a logistic model for the probability of being a participant to have $\beta$ coefficients that are not significantly different from 0 (except for the intercept, which is related to the overall fraction of people in the study who participated in NSW). This is easily evaluated in R.
+If NSW program participants are similar to comparison people in the data set, then we would expect a logistic regression model for the probability of being a NSW participant to have $\beta$ coefficients that are not significantly different from 0 (except for the intercept, which is related to the overall fraction of people in the study who participated in NSW). This is easily evaluated in R.
 
 ## Are NSW participants similar to nonparticipants?
 
 ```{r logistic}
-glm1  <- glm(treat~age + black +hisp + married + nodegr + re74, family=binomial, data=lalonde)
+glm1  <- glm(treat~age + black +hisp + married + nodegr + re74, family=binomial, 
+    data=lalonde)
 summary(glm1)
 ```
 
 ## Are NSW participants similar to nonparticipants?
 
-Based on this model, people without high school degrees were less likely to be in the NSW program than their counterparts who graduated high school. Maybe incomes were higher among program participants simply because program participants were more likely to have high school diplomas.
+Based on this model, people without high school degrees were less likely to be in the NSW program than their counterparts who graduated high school. However, people who participated were similar than nonparticipants in terms of the other factors. Maybe incomes were higher among program participants simply because program participants were more likely to have high school diplomas.
 
 ## Causal analysis
 
 Let's walk through the steps to perform a propensity score causal analysis of the jobs program.
 
- * We will consider treatment ($W$) to be program participation
+ * We will consider treatment $W$ to be program participation
  * Outcome is 1978 income
  
 We want to know if program participation led to increased income in 1978.
@@ -176,7 +195,8 @@ Aim of using propensity scores is to ensure **overlap** and **balance** of covar
 1. For binary treatments, fit propensity score model via logistic regression (we already did this!)
 
 ```{r propmodel, eval=FALSE}
-glm1  <- glm(treat~age + black +hisp + married + nodegr + re74, family=binomial, data=lalonde)
+glm1  <- glm(treat~age + black +hisp + married + nodegr + re74, family=binomial, 
+    data=lalonde)
 ```
 Next, estimate propensity scores
 ```{r}
@@ -205,7 +225,7 @@ ps_overlap = ps[overlap_ind]
 lalonde_overlap = lalonde[overlap_ind,]
 dim(lalonde); dim(lalonde_overlap)
 ```
-In this case, there was a good bit of overlap, so few observations were discarded.
+In this case, there was a good bit of overlap, so very few observations were discarded.
 
 ## Stage 1: Estimate the propensity score
 Assess balance of the covariates based on the propensity scores
@@ -220,17 +240,28 @@ Assess balance of the covariates based on the propensity scores
 For every covariate, we then assess the balance within **each of the blocks**, e.g. by a t-test or $\chi^2$ test
       
 ## Assessing balance: continuous variables      
+
 ```{r balancecontinuous, eval=FALSE}
-      t.test(lalonde_overlap$age[which(blocks==1)]~lalonde_overlap$treat[which(blocks==1)])
-      t.test(lalonde_overlap$re74[which(blocks==1)]~lalonde_overlap$treat[which(blocks==1)])
-      t.test(lalonde_overlap$age[which(blocks==2)]~lalonde_overlap$treat[which(blocks==2)])
-      t.test(lalonde_overlap$re74[which(blocks==2)]~lalonde_overlap$treat[which(blocks==2)])
-      t.test(lalonde_overlap$age[which(blocks==3)]~lalonde_overlap$treat[which(blocks==3)])
-      t.test(lalonde_overlap$re74[which(blocks==3)]~lalonde_overlap$treat[which(blocks==3)])
-      t.test(lalonde_overlap$age[which(blocks==4)]~lalonde_overlap$treat[which(blocks==4)])
-      t.test(lalonde_overlap$re74[which(blocks==4)]~lalonde_overlap$treat[which(blocks==4)])
-      t.test(lalonde_overlap$age[which(blocks==5)]~lalonde_overlap$treat[which(blocks==5)])
-      t.test(lalonde_overlap$re74[which(blocks==5)]~lalonde_overlap$treat[which(blocks==5)])
+      t.test(lalonde_overlap$age[which(blocks==1)]~
+               lalonde_overlap$treat[which(blocks==1)])
+      t.test(lalonde_overlap$re74[which(blocks==1)]~
+               lalonde_overlap$treat[which(blocks==1)])
+      t.test(lalonde_overlap$age[which(blocks==2)]~
+               lalonde_overlap$treat[which(blocks==2)])
+      t.test(lalonde_overlap$re74[which(blocks==2)]~
+               lalonde_overlap$treat[which(blocks==2)])
+      t.test(lalonde_overlap$age[which(blocks==3)]~
+               lalonde_overlap$treat[which(blocks==3)])
+      t.test(lalonde_overlap$re74[which(blocks==3)]~
+               lalonde_overlap$treat[which(blocks==3)])
+      t.test(lalonde_overlap$age[which(blocks==4)]~
+               lalonde_overlap$treat[which(blocks==4)])
+      t.test(lalonde_overlap$re74[which(blocks==4)]~
+               lalonde_overlap$treat[which(blocks==4)])
+      t.test(lalonde_overlap$age[which(blocks==5)]~
+               lalonde_overlap$treat[which(blocks==5)])
+      t.test(lalonde_overlap$re74[which(blocks==5)]~
+               lalonde_overlap$treat[which(blocks==5)])
 ```
 All p-values>0.05 (take my word for it!)
 
@@ -270,8 +301,8 @@ We can estimate causal effects using stratification of the propensity score (sim
  1. Divide subjects into $K$ strata by the corresponding quantiles of the estimated propensity score
  2. Estimate ATE within each subclass of $e_k$ and then average by the block size.
  
- $$ \hat{\tau}^{\text{ATE}} = \sum_{k=1}^K \{\left(\bar{Y}_{k,1} - \bar{Y}_{k,0}\right)\}\frac{N_{k,1}+N_{k,0}}{N} $$
- where $N_{k,1}, N_{k,0}$ are the number of units in class $k$ under treated and control.
+ $$ \hat{\tau}^{\text{ATE}} = \sum_{k=1}^K \left\{\left(\bar{Y}_{k,1} - \bar{Y}_{k,0}\right)\right\}\frac{N_{k,1}+N_{k,0}}{N} $$
+ where $N_{k,1}, N_{k,0}$ are the number of units in class $k$ under treatment and control.
 
 Variance Estimation:
 $$ \mathbb{V}(\hat{\tau}) = \sum_{k=1}^K \{\mathbb{V}(\bar{Y}_{k,1}) - \mathbb{V}(\bar{Y}_{k,0})\}\left(\frac{N_{k,1}+N_{k,0}}{N}\right)^2 $$
@@ -281,14 +312,15 @@ $$ \mathbb{V}(\hat{\tau}) = \sum_{k=1}^K \{\mathbb{V}(\bar{Y}_{k,1}) - \mathbb{V
 In propensity score matching, the distance metric between observations is the estimated propensity score.
 
   * Idea is to find a treated and control patient with very similar propensity scores 
-  * do this for all treated patients and then find the average difference of their outcome
+  * Do this for all treated patients and then find the average difference of their outcomes
 
 We can use the `Matching` package in R. Just input the outcome, treated variable, and estimated propensity score. 
 
 ## Matching
 
-```{r, message=FALSE}
-match1 <- Match(Y=lalonde_overlap$re78, Tr = lalonde_overlap$treat, X = ps_overlap, version='fast', estimand="ATE")
+```{r matching, message=FALSE}
+match1 <- Match(Y=lalonde_overlap$re78, Tr = lalonde_overlap$treat, X = ps_overlap, 
+      version='fast', estimand="ATE")
 summary(match1)
 ```
 
