--- a/decks/cs02_4_deck.Rmd
+++ b/decks/cs02_4_deck.Rmd
@@ -17,6 +17,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In this document, we'll be creating a Tableau dashboard using the People and Society data set from the CIA factbook. The beginning of this tutorial is very similar to the Tableau visualization of infant mortality tutorial, so we'll go briefly through this section and then move onto creating the dashboard.  
 
+### Importing The Data
+Again we will begin by opening R and selecting the "Statistical file" option for importing the data. However, this time select the data set labeled "full.RData" (this is available for download on the course website). Now we are ready to move onto creating our sheets and then our dashboard.
+
+![](dashboard_figures/import_data.png){width=400px}
+
 ### The Sheets
 Before we create our dashboard, we must first create the figures that will go on it. Each figure will have its own sheet, and we can customize these sheets as much as needed.
 
