--- a/decks/cs02_4_deck.Rmd
+++ b/decks/cs02_4_deck.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 In this document, we'll be creating a Tableau dashboard using the People and Society data set from the CIA factbook. The beginning of this tutorial is very similar to the Tableau visualization of infant mortality tutorial, so we'll go briefly through this section and then move onto creating the dashboard.  
 
 ### Importing The Data
-Again we will begin by opening R and selecting the "Statistical file" option for importing the data. However, this time select the data set labeled "full.RData" (this is available for download on the course website). Now we are ready to move onto creating our sheets and then our dashboard.
+Again we will begin by opening R and selecting the "Statistical file" option for importing the data. However, this time select the data set labeled [full.RData](data/full.Rdata). Now we are ready to move onto creating our sheets and then our dashboard.
 
 ![](dashboard_figures/import_data.png){width=400px}
 
@@ -27,7 +27,7 @@ Before we create our dashboard, we must first create the figures that will go on
 
 ***
 ##### A Note On Importing Data: 
-Sometimes when data is imported into Tableau it may be in the incorrect format for the use we desire of it. So, we can change its data type by clicking the drop-down arrow on the right side and using the the "Change Data Type" option. (Note: You can also change the geographic role of a variable, i.e., we can tell Tableau which variable should be denoting countries, etc.). 
+Sometimes when data is imported into Tableau it may be in the incorrect format for the use we desire of it. So, we can change its data type by clicking the drop-down arrow on the right side and using the the "Change Data Type" option. (Note: You can also change the geographic role of a variable, i.e., we can tell Tableau which variable should be denoting countries, etc.).  Note for example by clicking on IM_total that Tableau read it as a text string, so change it to a continuous variable.
 
 ![](dashboard_figures/convert_data_type.png){width=300px}
 
@@ -101,7 +101,7 @@ Then we can add our other plots in a similar manner. The dashboard will highligh
 ***
 
 ##### A Note On Filtering By Countries: 
-If we want some of the plots, e.g. the bar plots, to change depending on the country, we can filter by country. Click on the the map and in the upper right corner click on the drop down arrow and use the menu to filter by country. Then we want to "Use All" countries.
+If we want some of the plots, e.g. the bar plots, to change depending on the country, we can filter by country. Click on the map graphic and in the upper right corner click on the funnel to use that map as a filter. Then values of the other graphics/tables will change to be specific to any country you click on the map.
 
 ![](dashboard_figures/filter_ctr.png){width=200px}
 
